@@ -15,6 +15,7 @@
   * Object#__call now calls Object#call instead of Object#send so it can splat the arguments
   * Object#super now calls Object#call instead of Object#send so it can splat the arguments
   * Fix the extended callback
+  * build_static_method_call() accepts an optional $variable_name argument
 
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
